--- a/.htaccess
+++ b/.htaccess
@@ -2,10 +2,10 @@
 RewriteEngine On
 
 # Uncomment the following line if your public folder isn't the web server's root
-RewriteBase /
+RewriteBase /odeajax/
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-l
 RewriteCond %{REQUEST_URI} ^(.*)$
-RewriteRule ^(.*)$ index.php?url=$1 [L,QSA]
+RewriteRule ^(.*)$ index.php?t=$1 [L,QSA]
